--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="card-section is-active" id="about">
       <div class="card-content">
         <div class="card-subtitle">ABOUT</div>
-        <p class="card-desc">Hey there, **Codexcoder**! 🚀 As a budding web developer, you're about to embark on an exciting journey of pixels, code, and creativity. Whether it's crafting elegant interfaces or unraveling complex algorithms, your keyboard is your magic wand. Welcome to the world of ones and zeros—where every semicolon holds a universe of possibilities! ✨👩‍💻
+        <p class="card-desc">Hey there, **Codexcoder**! 🚀 As a budding web developer, you're about to embark on an exciting journey of pixels, code, and creativity. Welcome to the world of ones and zeros—where every semicolon holds a universe of possibilities! ✨👩‍💻
         </p>
       </div>
       <div class="card-social">
