--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <path d="M22 6l-10 7L2 6" /></svg>
             parassmottan@gmail.com
           </div>
-          <button class="contact-me" onclick = "href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"">WORK TOGETHER</button>
+          <button class="contact-me" "><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=VpCqJQwcpNjGjTNWFpBpTqWzthDskblrFsNMDHvRCJxQNKMnxFnMbNCTbZrvzfxrNmXCNkl">WORK TOGETHER</a></button>
         </div>
       </div>
     </div>
